@@ -1,4 +1,4 @@
-package com.zarinatta.zarinattacrawler.service.api;
+package com.zarinatta.zarinattacrawler.service.api.legacy.v2;
 
 import com.fasterxml.jackson.core.JsonProcessingException;
 import com.fasterxml.jackson.databind.JsonNode;
@@ -6,11 +6,11 @@ import com.fasterxml.jackson.databind.ObjectMapper;
 import com.zarinatta.zarinattacrawler.entity.Ticket;
 import com.zarinatta.zarinattacrawler.enums.StationCode;
 import com.zarinatta.zarinattacrawler.repository.TicketRepository;
+import com.zarinatta.zarinattacrawler.service.api.ApiService;
+import com.zarinatta.zarinattacrawler.service.api.TicketSchedulerVT;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
-import org.springframework.boot.CommandLineRunner;
-import org.springframework.stereotype.Component;
-import org.springframework.transaction.annotation.Transactional;
+import org.springframework.stereotype.Service;
 
 import java.io.IOException;
 import java.io.UnsupportedEncodingException;
@@ -20,60 +20,73 @@ import java.net.URLEncoder;
 import java.time.LocalDate;
 import java.time.LocalDateTime;
 import java.time.format.DateTimeFormatter;
+import java.time.temporal.ChronoUnit;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.concurrent.ExecutorService;
 import java.util.concurrent.Executors;
+import java.util.concurrent.Semaphore;
 
 /**
- * 초기 열차 데이터 세팅을 위한 클래스.
- * - 애플리케이션 시작 시 실행되며, 특정 기간의 열차 시간표 데이터를 수집.
- * - ExecutorService를 사용하여 병렬 처리하며, API 호출 및 JSON 파싱 후 DB에 저장.
+ * 구 OpenAPI 서버 연동 클라이언트.
+ *
+ * @deprecated 2026-09 서버 교체로 사용 중단.
+ *             {@link TicketSchedulerVT} 사용할 것.
  */
 @Slf4j
-@Component
+@Service
 @RequiredArgsConstructor
-@Transactional(readOnly = true)
-public class InitialTrainDataSetting implements CommandLineRunner {
+@Deprecated(since = "2026-09", forRemoval = true)
+public class TicketSchedulerV2 {
 
     private final ApiService apiService;
     private final TicketRepository ticketRepository;
-    private final String requestUrl = "http://apis.data.go.kr/1613000/TrainInfo/GetStrtpntAlocFndTrainInfo";
+    private final String requestUrl = "http://apis.data.go.kr/1613000/TrainInfoService/getStrtpntAlocFndTrainInfo";
     private final String serviceKey = "HfhAs61GSdPS9xgGhAlNLbH0YlnRdtbNa7MZVlJ6dAN5r7e3AYePUE9nQZv7X0PDqltq3o6ljr%2BKkLWb5TNzjg%3D%3D";
-    private final ExecutorService executorService = Executors.newFixedThreadPool(30);
+    private final ExecutorService executorService = Executors.newVirtualThreadPerTaskExecutor();
     private final String ENCODE = "UTF-8";
+    private final Semaphore dbSemaphore = new Semaphore(10);
 
-    @Override
-    public void run(String... args) {
-        //initialDataSet();
-    }
-
-    public void initialDataSet() {
-        log.info("초기 데이터 세팅 START - 시작 시간 : {}", LocalDateTime.now());
-        for (LocalDate date = LocalDate.now(); LocalDate.now().plusDays(5).isAfter(date); date = date.plusDays(1)) {
+    /**
+     * 매일 새벽 1시에 기차 시간표 정보를 가져와 DB에 저장 (가상 스레드 활용)
+     */
+    // @Scheduled(cron = "0 0 1 * * *", zone = "Asia/Seoul")
+    public void getTrainSchedule() {
+        LocalDateTime startTime = LocalDateTime.now();
+        LocalDate weekAfter = LocalDate.now().plusDays(5);
+        log.info("========= {} 기차 시간표 배치 작업 시작=========", weekAfter);
+        try (ExecutorService executorService = Executors.newVirtualThreadPerTaskExecutor()) {
             for (StationCode departureId : StationCode.values()) {
                 for (StationCode arriveId : StationCode.values()) {
-                    LocalDate requestDate = date;
+                    if (departureId == arriveId) continue;
                     executorService.submit(() -> {
                         try {
+                            dbSemaphore.acquire();
                             // URL 생성
-                            URL url = buildUrl(departureId, arriveId, requestDate);
+                            URL url = buildUrl(departureId, arriveId, weekAfter);
                             // API 호출
                             StringBuilder sb = apiService.callTrainApi(url);
                             // JSON 파싱 및 저장
                             convertToJsonAndSave(sb);
                         } catch (IOException e) {
                             log.error("API 호출 중 예외 발생 departure: {}  arrive: {}", departureId, arriveId);
-                            log.error("API 호출 중 원본 예외", e);
+                            log.error("원본 예외 : ", e);
                             throw new RuntimeException(e);
+                        } catch (InterruptedException e) {
+                            throw new RuntimeException(e);
+                        } finally {
+                            dbSemaphore.release(); // 작업 완료 후 허가 반납
                         }
                     });
                 }
             }
         }
+        LocalDateTime endTime = LocalDateTime.now();
+        log.info("========= {} 기차 시간표 배치 작업 끝=========", weekAfter);
+        log.info("소요시간 : {} minute =========", ChronoUnit.MINUTES.between(startTime, endTime));
     }
 
-    private URL buildUrl(StationCode departureId, StationCode arriveId, LocalDate requestDate) {
+    private URL buildUrl(StationCode departureId, StationCode arriveId, LocalDate weekAfter) {
         DateTimeFormatter total = DateTimeFormatter.ofPattern("yyyyMMdd");
         StringBuilder urlBuilder = new StringBuilder(requestUrl);
         try {
@@ -83,7 +96,7 @@ public class InitialTrainDataSetting implements CommandLineRunner {
             urlBuilder.append("&" + URLEncoder.encode("_type", "UTF-8") + "=" + URLEncoder.encode("json", ENCODE));
             urlBuilder.append("&" + URLEncoder.encode("depPlaceId", "UTF-8") + "=" + URLEncoder.encode(departureId.getCode(), ENCODE));
             urlBuilder.append("&" + URLEncoder.encode("arrPlaceId", "UTF-8") + "=" + URLEncoder.encode(arriveId.getCode(), ENCODE));
-            urlBuilder.append("&" + URLEncoder.encode("depPlandTime", "UTF-8") + "=" + URLEncoder.encode(requestDate.format(total), ENCODE));
+            urlBuilder.append("&" + URLEncoder.encode("depPlandTime", "UTF-8") + "=" + URLEncoder.encode(weekAfter.format(total), ENCODE));
             URL url = new URL(urlBuilder.toString());
             return url;
         } catch (UnsupportedEncodingException e) {
@@ -94,7 +107,6 @@ public class InitialTrainDataSetting implements CommandLineRunner {
             throw new RuntimeException(e);
         }
     }
-
     public void convertToJsonAndSave(StringBuilder sb) {
         ObjectMapper mapper = new ObjectMapper();
         List<Ticket> ticketList = new ArrayList<>();
